[gd_scene load_steps=6 format=2]

[ext_resource path="res://Buttons.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/ML_TT_Pooram_Bold.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/prayer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/malayalamfont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="prayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" parent="." instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 39.0
margin_right = 283.0
margin_bottom = 409.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "@"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 5.0
margin_top = 10.0
margin_right = 283.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.313726, 0, 0, 1 )
text = "]Ww"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="HBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]

[editable path="HBoxContainer"]
